--- a/Noetic/Noetic.WebUI/Views/Basket/Index.cshtml
+++ b/Noetic/Noetic.WebUI/Views/Basket/Index.cshtml
@@ -33,7 +33,8 @@
             @Html.DisplayFor(modelItem => item.ProductName)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Quantity)
+            @*@Html.DisplayFor(modelItem => item.Quantity)*@
+            @Html.EditorFor(modelItem => item.Quantity, new { htmlAttributes = new { @class = "form-control", @style = "width:100px" } })
         </td>
         <td>
             @*@Html.DisplayFor(modelItem => item.Price)*@
