--- a/Noetic/Noetic.WebUI/Views/ProductManager/Edit.cshtml
+++ b/Noetic/Noetic.WebUI/Views/ProductManager/Edit.cshtml
@@ -48,6 +48,14 @@
             </div>
 
             <div class="form-group">
+                @Html.LabelFor(model => model.Product.Quantity, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Product.Quantity, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Product.Quantity, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
                 @Html.LabelFor(model => model.Product.Category, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.DropDownListFor(model => model.Product.Category, new SelectList(Model.ProductCategories, "Category", "Category"), htmlAttributes: new { @class = "control-label col-md-2" })
