--- a/Noetic/Noetic.WebUI/Views/ProductManager/Index.cshtml
+++ b/Noetic/Noetic.WebUI/Views/ProductManager/Index.cshtml
@@ -22,6 +22,9 @@
             @Html.DisplayNameFor(model => model.Price)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.Quantity)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Category)
         </th>
         <th></th>
@@ -40,6 +43,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Price)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Quantity)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Category)
